@@ -1,5 +1,9 @@
 2005-11-14  Vincent Noel  <vnoel@cox.net>
 
+	* userprefs.c (prefs_create_defaults): Add a few more default logs.
+
+2005-11-14  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c (logview_menus_set_state): Don't allow row collapsing
 	for logs without days.
 
